err/rhaptos.cnxmlutils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rhaptos'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils'...
Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/addsectiontags.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/addsectiontags.py", line 173
    print level
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/odt2cnxml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/odt2cnxml.py", line 233
    except etree.XMLSyntaxError, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng/0.6'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng/0.7'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/tests'...
Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/validatecnxml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/validatecnxml.py", line 24
    print "Document validates against cnxml 0.7"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/xml2xhtml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/xml2xhtml.py", line 86
    print "argparse is needed for commandline"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/xsl'...
Listing './lib/python3.5/site-packages/rhaptos.cnxmlutils-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
